# garybot

./: .gitignore  COMMANDS.md  README.md  example-config.ini  garybot-3.0.py  garybot_1.0.py  prompt  pyproject.toml  requirements.txt  start.sh
data/odds/: baseball_mlb.json  basketball_nba.json  icehockey_nhl.json
data/user-logs/: user_logs.db
infrastructure/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  openrc_service_script
pyrc/: __init__.py  comms.py  constants.py  handler.py  logger.py  parser.py  startup.py
pyrc/channel_functions/: arbitrary.py  autoreplies.py  channelfcns.py  constants.py  exceptions.py  functions.py  helpers.py  sportsbook.py  sundries.py  test.py
pyrc/sportsbook/: constants.py  exceptions.py  functions.py  helpers.py
src/: comms.py  config.py  handler.py  logger.py  main.py  old-new-comms.py  parser.py  startup.py
src/actors/: build.py
src/channel_functions/: constants.py  functions.py  general.py  helpers.py  sportsbook.py  trivia.py
src/client/: actors.py  client.py  dispatcher.py  listener.py  logger.py  writer.py
src/config/: config.py
src/sportsbook/: functions.py  helpers.py
