[project]
name = "garybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gevent>=25.9.1",
    "google-genai>=1.67.0",
    "h11>=0.16.0",
    "isodate>=0.7.2",
    "loguru>=0.7.3",
    "pyasn1>=0.6.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.4",
    "urllib3>=2.6.3",
]
