[project]
name = "garybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ediri-vultr>=2.27.1",
    "gevent>=26.4.0",
    "google-genai>=1.73.1",
    "h11>=0.16.0",
    "isodate>=0.7.2",
    "loguru>=0.7.3",
    "pyasn1>=0.6.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "urllib3>=2.6.3",
]
